--- a/public/stylesheets/recette-new.css
+++ b/public/stylesheets/recette-new.css
@@ -34,8 +34,6 @@
 }
 
 .recette-button > a > i {
-  background: transparent 0 0 no-repeat;
-  display: inline-block;
   height: 35px;
   margin: 0 10px;
   position: relative;
@@ -48,17 +46,7 @@
   height: 40px;
 }
 
-.recette-button > a > i.edit {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%2032%2032%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%3Cpath%20fill%3D%22%23fff%22%20id%3D%22svg_1%22%20d%3D%22m27%2C0c2.761%2C0%205%2C2.239%205%2C5c0%2C1.126%20-0.372%2C2.164%20-1%2C3l-2%2C2l-7%2C-7l2%2C-2c0.836%2C-0.628%201.874%2C-1%203%2C-1zm-25%2C23l-2%2C9l9%2C-2l18.5%2C-18.5l-7%2C-7l-18.5%2C18.5zm20.362%2C-11.638l-14%2C14l-1.724%2C-1.724l14%2C-14l1.724%2C1.724z%22%2F%3E%0A%3C%2Fsvg%3E");
-  transform: scale(0.7);
-}
-
-.recette-button > a > i.fork {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20550%20550%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%3Cg%3E%0A%20%20%3Cg%20id%3D%22svg_2%22%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_1%22%20cy%3D%22351.24232%22%20cx%3D%2271.18178%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cpath%20stroke%3D%22%23ffffff%22%20id%3D%22svg_6%22%20d%3D%22m125.66195%2C355.98603c34.83013%2C-2.17733%2062.83082%2C17.4186%2090.14857%2C-64.23112c27.31775%2C-81.64973%2059.41611%2C-92.53636%20124.29577%2C-91.44769%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cline%20stroke-linecap%3D%22null%22%20stroke-linejoin%3D%22null%22%20id%3D%22svg_8%22%20y2%3D%22358.01505%22%20x2%3D%22419.68309%22%20y1%3D%22358.01505%22%20x1%3D%22122.68175%22%20stroke-width%3D%2238.5%22%20fill%3D%22none%22%20stroke%3D%22%23ffffff%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_11%22%20cy%3D%22198.2502%22%20cx%3D%22372.91159%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_12%22%20cy%3D%22351.82273%22%20cx%3D%22476.95034%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%3C%2Fg%3E%0A%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
-}
-
 .recette-button > a > i.remove {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%3Cg%3E%0A%20%20%3Cline%20stroke-width%3D%2254.5%22%20x1%3D%2227.5%22%20y1%3D%2228.49999%22%20x2%3D%22372.49999%22%20y2%3D%22372.50001%22%20id%3D%22svg_1%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%20%3Cline%20stroke-width%3D%2254.5%22%20x1%3D%22373.49998%22%20y1%3D%2229.5%22%20x2%3D%2229.50001%22%20y2%3D%22372.50001%22%20id%3D%22svg_2%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
   height: 25px;
   top: 5px;
   transform: scale(0.5);
@@ -66,18 +54,18 @@
 }
 
 .recette-button > a > i.add {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%3Cg%3E%0A%20%20%3Cline%20stroke-width%3D%2254.5%22%20x1%3D%2227.5%22%20y1%3D%2228.49999%22%20x2%3D%22372.49999%22%20y2%3D%22372.50001%22%20id%3D%22svg_1%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%20%3Cline%20stroke-width%3D%2254.5%22%20x1%3D%22373.49998%22%20y1%3D%2229.5%22%20x2%3D%2229.50001%22%20y2%3D%22372.50001%22%20id%3D%22svg_2%22%20stroke%3D%22%23fff%22%2F%3E%0A%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
   height: 25px;
   top: 5px;
   transform: scale(0.5) rotate(45deg);
   width: 25px;
 }
 
-
 .recette-button > a {  
   background-color: #09d;
+  border-radius: 5px;
   color: white;
   display: inline-block;
+  padding: 2px;
   text-decoration: none;
   text-align: center;
 }
@@ -94,4 +82,16 @@
   label {
     display: block;
   }
+}
+
+.commentaires {
+  list-style: none;
+  padding: 0;
+}
+
+.commentaires > li {
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
 }
