--- a/public/stylesheets/recettes.css
+++ b/public/stylesheets/recettes.css
@@ -50,21 +50,6 @@
   text-align: right;
 }
 
-.likes > * {
-  border-radius: 8px;
-  color: white;
-  padding: 5px 15px;
-}
-
-.likes > .plus {
-  background-color: #2A2;
-  margin-right: 5px;
-}
-
-.likes > .minus {
-  background-color: #F73;
-}
-
 .hashtag {
   color: white;
   font-weight: bold;
@@ -72,7 +57,7 @@
 }
 
 .recette-icon {
-  background-color: #09d;
+  background-color: #dec39a;
   border-radius: 5px;
   display: inline-block;
   margin-right: 4px;
@@ -81,8 +66,6 @@
 }
 
 .recette-icon > a > i {
-  background: transparent 0 0 no-repeat;
-  display: inline-block;
   height: 18px;
   margin: 0 2px;
   position: relative;
@@ -106,24 +89,6 @@
   height: auto;
   opacity: 1;
   transition: opacity 300ms;
-}
-
-.recette-icon > a > i.twitter {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%2072%2072%22%3E%3Cpath%20fill%3D%22none%22%20d%3D%22M0%200h72v72H0z%22%2F%3E%3Cpath%20class%3D%22icon%22%20fill%3D%22%23fff%22%20d%3D%22M68.812%2015.14c-2.348%201.04-4.87%201.744-7.52%202.06%202.704-1.62%204.78-4.186%205.757-7.243-2.53%201.5-5.33%202.592-8.314%203.176C56.35%2010.59%2052.948%209%2049.182%209c-7.23%200-13.092%205.86-13.092%2013.093%200%201.026.118%202.02.338%202.98C25.543%2024.527%2015.9%2019.318%209.44%2011.396c-1.125%201.936-1.77%204.184-1.77%206.58%200%204.543%202.312%208.552%205.824%2010.9-2.146-.07-4.165-.658-5.93-1.64-.002.056-.002.11-.002.163%200%206.345%204.513%2011.638%2010.504%2012.84-1.1.298-2.256.457-3.45.457-.845%200-1.666-.078-2.464-.23%201.667%205.2%206.5%208.985%2012.23%209.09-4.482%203.51-10.13%205.605-16.26%205.605-1.055%200-2.096-.06-3.122-.184%205.794%203.717%2012.676%205.882%2020.067%205.882%2024.083%200%2037.25-19.95%2037.25-37.25%200-.565-.013-1.133-.038-1.693%202.558-1.847%204.778-4.15%206.532-6.774z%22%2F%3E%3C%2Fsvg%3E");
-}
-
-.recette-icon > a > i.detail {
-  background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201024%201024%22%3E%3Cpath%20fill%3D%22white%22%20d%3D%22M992.262%20871.396l-242.552-206.294c-25.074-22.566-51.89-32.926-73.552-31.926%2057.256-67.068%2091.842-154.078%2091.842-249.176%200-212.078-171.922-384-384-384-212.076%200-384%20171.922-384%20384s171.922%20384%20384%20384c95.098%200%20182.108-34.586%20249.176-91.844-1%2021.662%209.36%2048.478%2031.926%2073.552l206.294%20242.552c35.322%2039.246%2093.022%2042.554%20128.22%207.356s31.892-92.898-7.354-128.22zM384%20640c-141.384%200-256-114.616-256-256s114.616-256%20256-256%20256%20114.616%20256%20256-114.614%20256-256%20256z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E");
-}
-
-.recette-icon > a > i.facebook {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20260%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%20%3Cline%20stroke%3D%22%23ffffff%22%20id%3D%22svg_5%22%20y2%3D%22187.5%22%20x2%3D%22231.51036%22%20y1%3D%22187.5%22%20x1%3D%2221.5%22%20fill-opacity%3D%22null%22%20stroke-width%3D%2260%22%20fill%3D%22none%22%2F%3E%0A%20%20%3Cpath%20stroke%3D%22%23ffffff%22%20id%3D%22svg_6%22%20d%3D%22m122.5%2C384.5c-1%2C-36.77047%20-1%2C-243.97578%20-1%2C-285.99254c0%2C-42.01675%2065%2C-49.07553%2078%2C-49.02729c13%2C0.04824%2017%2C0.06964%2040.5%2C0.58035%22%20stroke-width%3D%2260%22%20fill%3D%22none%22%2F%3E%0A%3C%2Fsvg%3E");
-  transform: scale(1.2) translate(2px, 1px);
-}
-
-.recette-icon > a > i.fork {
-  background-image: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20550%20550%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%0A%20%3Cg%3E%0A%20%20%3Cg%20id%3D%22svg_2%22%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_1%22%20cy%3D%22351.24232%22%20cx%3D%2271.18178%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cpath%20stroke%3D%22%23ffffff%22%20id%3D%22svg_6%22%20d%3D%22m125.66195%2C355.98603c34.83013%2C-2.17733%2062.83082%2C17.4186%2090.14857%2C-64.23112c27.31775%2C-81.64973%2059.41611%2C-92.53636%20124.29577%2C-91.44769%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cline%20stroke-linecap%3D%22null%22%20stroke-linejoin%3D%22null%22%20id%3D%22svg_8%22%20y2%3D%22358.01505%22%20x2%3D%22419.68309%22%20y1%3D%22358.01505%22%20x1%3D%22122.68175%22%20stroke-width%3D%2238.5%22%20fill%3D%22none%22%20stroke%3D%22%23ffffff%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_11%22%20cy%3D%22198.2502%22%20cx%3D%22372.91159%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%20%3Cellipse%20stroke%3D%22%23fff%22%20ry%3D%2250.49997%22%20rx%3D%2250.49997%22%20id%3D%22svg_12%22%20cy%3D%22351.82273%22%20cx%3D%22476.95034%22%20stroke-width%3D%2238.5%22%20fill%3D%22%230f0f00%22%20fill-opacity%3D%220%22%2F%3E%0A%20%20%3C%2Fg%3E%0A%20%3C%2Fg%3E%0A%3C%2Fsvg%3E");
-  transform: scale(1.3) ;
 }
 
 .recette-icon > a {
