--- a/views/admin/recettes.jade
+++ b/views/admin/recettes.jade
@@ -16,7 +16,7 @@ block content
       each recette in recettes
         tr
           td= recette.nom
-          td= recette.ajoute.toISOString().substr(0, 10)
+          td= formatDate(recette.ajoute, "dateTime")
           td= recette.auteur
           td
             a(href='/recette/' + recette._id + '/delete') Supprimer
