--- a/views/recettes/detail.jade
+++ b/views/recettes/detail.jade
@@ -19,9 +19,9 @@ block content
 
   em= 'postée par '
   a(href="/recettes/search/auteur/" + recette.auteur +'/1')= recette.auteur
-  span=' le ' + recette.ajoute.toISOString().substr(0, 10)
+  span=' le ' + formatDate(recette.ajoute)
 
-  form.recette(method="POST")
+  .recette
     div
       h2 Informations
     ul.recette-informations
@@ -56,13 +56,24 @@ block content
 
     div
       h3 Commentaires :
-      if (recette.commentaires && recette.commentaires.length > 0)
-        ul
-          for commentaire in recette.commentaires
+      if (recette.comments && recette.comments.length > 0)
+        ul.commentaires
+          for comment in recette.comments
             li
-              div
-                span posté par 
-                a(href="/users/" + commentaire.user)= commentaire.auteur 
-                span le 
-                span= commentaire.poste.toISOString().substr(0, 10)
-      form(method="POST", action="")
+              span posté par 
+              a(href="/users/" + comment.auteur)= comment.auteur 
+              span &nbsp;le 
+              span= formatDate(comment.ajoute, 'dateTime')
+              br
+              br
+              div= comment.corps
+      else
+        div Soyez le premier à commenter cette recette !
+        br
+      if (user && user.local.pseudo)
+        form(action="/recette/" + recette._id + '/comment', method="POST")
+          .col-50.padded-right
+            label(for="comment") Votre commentaire
+            textarea(name="comment", rows=4, placeholder="Super recette !")
+          .col-50
+            input(type="submit", value="✔")
