Suppression des liens logins / signup dans l'index si loggué

--- a/views/site/index.jade
+++ b/views/site/index.jade
@@ -17,7 +17,8 @@ block content
     br
     | Marquez les arômes que vous possédez et découvrez quelles recettes y sont associées.
 
-  p.center 
-    a.login(href='/users/signup') S'enregistrer
-    span &nbsp;
-    a.login(href='/users/login') Se connecter
+  if (!user)
+    p.center 
+      a.login(href='/users/signup') S'enregistrer
+      span &nbsp;
+      a.login(href='/users/login') Se connecter
