ajout des likes

--- a/public/stylesheets/icons.css
+++ b/public/stylesheets/icons.css
@@ -13,25 +13,36 @@ i.detail {
   background-image: url("data:image/svg+xml,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20viewBox%3D%220%200%201024%201024%22%3E%3Cpath%20fill%3D%22white%22%20d%3D%22M992%20871l-242-206c-25-22-51-32-73-31%2057-67%2091-154%2091-249%200-212-171-384-384-384-212%200-384%20171-384%20384s171%20384%20384%20384c95%200%20182-34%20249-91-1%2021%209%2048%2031%2073l206%20242c35%2039%2093%2042%20128%207s31-92-7-128zM384%20640c-141%200-256-114-256-256s114-256%20256-256%20256%20114%20256%20256-114%20256-256%20256z%22%3E%3C%2Fpath%3E%3C%2Fsvg%3E");
 }
 
-input.like, input.liked {
+input.like, input.liked, input.unlikeable {
   border: none;
-  cursor: pointer;
   height: 29px;
   margin: 0 5px;
   transform: translateY(5px);
   width: 29px;
 }
 
-input.like:focus, input.liked:focus {
+input.like {
+  cursor: pointer;
+}
+
+input.like:focus, input.liked:focus, input.unlikeable:focus {
   border: none;
   outline: none;
 }
 
-input.liked:hover, input.like {
+input.like {
   background: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20id%3D%22svg_1%22%20d%3D%22m363%2C197c0%2C-25%20-20%2C-39%20-49%2C-39l-82%2C0c6%2C-22%208%2C-42%208%2C-61c0%2C-71%20-19%2C-85%20-36%2C-85c-11%2C0%20-19%2C1%20-30%2C7c-3%2C2%20-4%2C4%20-6%2C8l-12%2C66c-13%2C34%20-46%2C64%20-73%2C85l0%2C175c9%2C0%2019%2C4%2031%2C11c13%2C6%2026%2C13%2041%2C13l116%2C0c24%2C0%2042%2C-19%2042%2C-36c0%2C-3%200%2C-6%20-1%2C-8c14%2C-6%2025%2C-18%2025%2C-34c0%2C-7%20-1%2C-13%20-3%2C-19c9%2C-6%2018%2C-17%2018%2C-29c0%2C-7%20-3%2C-14%20-7%2C-20c9%2C-7%2017%2C-19%2017%2C-31l1%2C-3z%22%20fill%3D%22%23bfd2d1%22%2F%3E%3Crect%20x%3D%2263%22%20y%3D%22178%22%20width%3D%2232%22%20height%3D%22175%22%20fill%3D%22%23bfd2d1%22%2F%3E%3C%2Fsvg%3E") no-repeat;
 }
 
-input.like:hover, input.liked {
+input.unlikeable {
+  background: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20id%3D%22svg_1%22%20d%3D%22m363%2C197c0%2C-25%20-20%2C-39%20-49%2C-39l-82%2C0c6%2C-22%208%2C-42%208%2C-61c0%2C-71%20-19%2C-85%20-36%2C-85c-11%2C0%20-19%2C1%20-30%2C7c-3%2C2%20-4%2C4%20-6%2C8l-12%2C66c-13%2C34%20-46%2C64%20-73%2C85l0%2C175c9%2C0%2019%2C4%2031%2C11c13%2C6%2026%2C13%2041%2C13l116%2C0c24%2C0%2042%2C-19%2042%2C-36c0%2C-3%200%2C-6%20-1%2C-8c14%2C-6%2025%2C-18%2025%2C-34c0%2C-7%20-1%2C-13%20-3%2C-19c9%2C-6%2018%2C-17%2018%2C-29c0%2C-7%20-3%2C-14%20-7%2C-20c9%2C-7%2017%2C-19%2017%2C-31l1%2C-3z%22%20fill%3D%22%23bfd2d1%22%2F%3E%3Crect%20x%3D%2263%22%20y%3D%22178%22%20width%3D%2232%22%20height%3D%22175%22%20fill%3D%22%23bfd2d1%22%2F%3E%3C%2Fsvg%3E") no-repeat;
+}
+
+input.liked {
+  background: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20id%3D%22svg_1%22%20d%3D%22m363%2C197c0%2C-25%20-20%2C-39%20-49%2C-39l-82%2C0c6%2C-22%208%2C-42%208%2C-61c0%2C-71%20-19%2C-85%20-36%2C-85c-11%2C0%20-19%2C1%20-30%2C7c-3%2C2%20-4%2C4%20-6%2C8l-12%2C66c-13%2C34%20-46%2C64%20-73%2C85l0%2C175c9%2C0%2019%2C4%2031%2C11c13%2C6%2026%2C13%2041%2C13l116%2C0c24%2C0%2042%2C-19%2042%2C-36c0%2C-3%200%2C-6%20-1%2C-8c14%2C-6%2025%2C-18%2025%2C-34c0%2C-7%20-1%2C-13%20-3%2C-19c9%2C-6%2018%2C-17%2018%2C-29c0%2C-7%20-3%2C-14%20-7%2C-20c9%2C-7%2017%2C-19%2017%2C-31l1%2C-3z%22%20fill%3D%22%2300B7AF%22%2F%3E%3Crect%20x%3D%2263%22%20y%3D%22178%22%20width%3D%2232%22%20height%3D%22175%22%20fill%3D%22%2300B7AF%22%2F%3E%3C%2Fsvg%3E") no-repeat;
+}
+
+input.like:hover {
   background: url("data:image/svg+xml,%3Csvg%20viewBox%3D%220%200%20400%20400%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Cpath%20id%3D%22svg_1%22%20d%3D%22m363%2C197c0%2C-25%20-20%2C-39%20-49%2C-39l-82%2C0c6%2C-22%208%2C-42%208%2C-61c0%2C-71%20-19%2C-85%20-36%2C-85c-11%2C0%20-19%2C1%20-30%2C7c-3%2C2%20-4%2C4%20-6%2C8l-12%2C66c-13%2C34%20-46%2C64%20-73%2C85l0%2C175c9%2C0%2019%2C4%2031%2C11c13%2C6%2026%2C13%2041%2C13l116%2C0c24%2C0%2042%2C-19%2042%2C-36c0%2C-3%200%2C-6%20-1%2C-8c14%2C-6%2025%2C-18%2025%2C-34c0%2C-7%20-1%2C-13%20-3%2C-19c9%2C-6%2018%2C-17%2018%2C-29c0%2C-7%20-3%2C-14%20-7%2C-20c9%2C-7%2017%2C-19%2017%2C-31l1%2C-3z%22%20fill%3D%22%230099dd%22%2F%3E%3Crect%20x%3D%2263%22%20y%3D%22178%22%20width%3D%2232%22%20height%3D%22175%22%20fill%3D%22%230099dd%22%2F%3E%3C%2Fsvg%3E") no-repeat;
 }
 
@@ -57,10 +68,6 @@ svg.like {
   margin: 0 5px;
   transform: translateY(5px);
   width: 25px;
-}
-
-svg.like.liked > *, svg.like:hover > * {
-  fill: #00B7AF;
 }
 
 i.remove {
