--- a/views/site/menu.jade
+++ b/views/site/menu.jade
@@ -1,52 +1,72 @@
 nav
-  
-  .brand-icon.col-20.left
+
+  input(type="checkbox" id="drawer-btn")
+  label(for="drawer-btn").drawer-btn
+    hr
+    hr
+    hr
+  .drawer-frame
+    ul.drawer-menu
+      li.separator
+      li.title Recettes
+      li
+        a(href='/recettes/all/1') Toutes les recettes
+      li
+        a(href='/recette/new/edit') Nouvelle recette
+      if (user)
+        li
+          a(href='/recettes/search/auteur/' + user.local.pseudo) Mes recettes
+
+      li.separator
+      li.title Arômes
+      li
+        a(href="/aromes/all") Tous les arômes
+      li
+        a(href="/aromes/new") Nouvel arôme
+      if (user)
+        li
+          a(href='/aromes/my/') Mes arômes
+
+      //- li.separator
+      //- li.title Groupes
+      //- li 
+      //-   a(href="/groupes/all") Tous les groupes
+      //- li
+      //-   a(href="/groupes/new") Nouveau groupe
+      //- li
+      //-   a(href="/groupes/my") Mes groupes 
+
+      li.separator
+      li.title Profil
+      if (!user)
+        li
+          a(href='/users/login') Connexion
+        li
+          a(href='/users/signup') Inscription
+      else
+        li
+          a(href='/users/profile') Mon profil
+        li
+          a(href='/users/logout') Déconnexion
+
+  .brand-icon.col-50.left
       a(href="/") Recipes
-  .col-30
+
+  .col-50.right
     .search-bar
       label(for="search-bar", placeholder="#custard, Strawberry, Fraise, Gourmand...") Search
       input(name="search-bar" type="text")
       input(type="submit", value="➜")
-  ul.menu
-    li
-      span Recettes
-        ul
-          li
-            a(href='/recettes/all/1') Toutes les recettes
-          li
-            a(href='/recette/new/edit') Nouvelle recette
-          if (user)
-            li
-              a(href='/recettes/search/auteur/' + user.local.pseudo) Mes recettes
-    li
-      span Arômes
-        ul
-          li
-            a(href="/aromes/all") Tous les arômes
-          li
-            a(href="/aromes/new") Nouvel arôme
-          li
-            a(href="/aromes/my") Mes arômes
-    //- li
-    //-   span Groupes
-    //-     ul
-    //-       li
-    //-         a(href="/groupes/all") Tous les groupes
-    //-       li
-    //-         a(href="/groupes/new") Nouveau groupe
-    //-       li
-    //-         a(href="/groupes/my") Mes groupes
 
-    li
-      span Profil
-        ul
-          if (!user)
-            li
-              a(href='/users/login') Connexion
-            li
-              a(href='/users/signup') Inscription
-          else
-            li
-              a(href='/users/profile') Mon profil
-            li
-              a(href='/users/logout') Déconnexion
+  //-     span Profil
+  //-       ul
+  //-         if (!user)
+  //-           li
+  //-             a(href='/users/login') Connexion
+  //-           li
+  //-             a(href='/users/signup') Inscription
+  //-         else
+  //-           li
+  //-             a(href='/users/profile') Mon profil
+  //-           li
+  //-             a(href='/users/logout') Déconnexion
