--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -155,17 +155,19 @@ main {
   border: 2px solid white;
   border-radius: 6px;
   display: inline-block;
-  padding: 2px 4px !important;
+  padding: 2px 3px !important;
   position: fixed;
   top: 15px;
   left: 15px;
 }
 
 .drawer-btn > hr {
-  height: 4px;
-  width: 25px;
-  margin: 5px;
   background-color: #fff;
+  border: none;
+  border-radius: 5px;
+  height: 3px;
+  margin: 5px;
+  width: 25px;
 }
 
 .drawer-frame {
