--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -140,26 +140,40 @@ main {
   }
 
   nav {
-    height: 130px;
+    height: 110px;
   }
 
   main {
-    padding-top: 150px;
+    padding-top: 120px;
   }
 
   .search-bar {
     margin-left: 10px;
-    margin-right: 20px;
+    margin-right: 10px;
+  }
+
+  .search-bar > label {
+    font-size: 25px;
+    margin-right: 10px;
+  }
+
+  .search-bar > input[type="submit"] {
+    margin-left: 5px;
   }
 
   ul.recettes > li {
     margin-right: 0;
+    padding: 0;
   }
 
   .recette-container {
     margin: 0 !important;
     min-width: 95vw !important;
     width: 95vw !important;
+  }
+
+  .recette {
+    padding-left: 0;
   }
 
 }
@@ -222,11 +236,28 @@ input[type="checkbox"]:checked + .drawer-btn + .drawer-frame + .brand-icon {
 
 .drawer-menu {
   margin-left: -250px;
-  padding-left: 16px;
-  padding-right: 16px;
+  padding: 0;
   padding-top: 50px;
   transition: margin-left 0.2s;
   width: 250px;
+}
+
+.drawer-menu > .title {
+  margin-left: 20px;
+  margin-bottom: 5px;
+}
+.drawer-menu > .separator {
+  margin: auto;
+}
+
+.drawer-menu > li > a  {
+  background-color: #fff;
+  display: block;
+  padding: 6px 20px;
+}
+
+.drawer-menu li > a:hover {
+  background-color: #eaeef3;
 }
 
 .drawer-menu .separator {
@@ -235,6 +266,7 @@ input[type="checkbox"]:checked + .drawer-btn + .drawer-frame + .brand-icon {
   height: 2px;
   margin-bottom: 20px;
   margin-top: 20px;
+  padding: 0;
   width: 90%;
 }
 
