--- a/public/stylesheets/layout.css
+++ b/public/stylesheets/layout.css
@@ -212,24 +212,24 @@ main {
   padding: 0;
 }
 
-input[type="checkbox"] {
+nav input[type="checkbox"] {
   display: none
 }
 
-input[type="checkbox"]:checked + .drawer-btn hr {
+nav input[type="checkbox"]:checked + .drawer-btn hr {
   background-color: #ccc;  
   color: #ccc;
 }
-input[type="checkbox"]:checked + .drawer-btn {
+nav input[type="checkbox"]:checked + .drawer-btn {
   border-color: #ccc;
 }
 
-input[type="checkbox"]:checked + .drawer-btn + .drawer-frame .drawer-menu {
+nav input[type="checkbox"]:checked + .drawer-btn + .drawer-frame .drawer-menu {
   margin-left: 0;
   transition: all 0.2s;
 }
 
-input[type="checkbox"]:checked + .drawer-btn + .drawer-frame + .brand-icon {
+nav input[type="checkbox"]:checked + .drawer-btn + .drawer-frame + .brand-icon {
   margin-left: 15px;
   transition: all 0.2s;
 }
