Fix link to js => from root

--- a/views/recettes/all.pug
+++ b/views/recettes/all.pug
@@ -1,7 +1,7 @@
 extends ../site/layout
 block extend_head
   link(rel='stylesheet', href='/stylesheets/recettes.css')
-  script(src="../../javascripts/recette.js")    
+  script(src="/javascripts/recette.js")    
 block content
 
   h1 #{ title }
