--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,8 +8,34 @@ form ul {
   padding: 0;
 }
 
-a {
-  color: #00B7FF;
+a:not([no-border]) {
+  color: #09d !important; 
+  position: relative;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+a:not([no-border]):hover {
+  color: #7cf !important; 
+  transition: color 0.2s;
+}
+
+a:not([no-border]):before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: 0;
+  left: 0;
+  background-color: #7cf;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s;
+}
+
+a:not([no-border]):hover:before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
 h1, h2, .h1 {
@@ -175,7 +201,6 @@ input[type="number"] {
 
 main input[type="submit"] {
   border: none;
-  border-radius: 5px;
   background-color: #6d6;
   color: white;
   cursor: pointer;
@@ -240,6 +265,19 @@ footer span {
   background-color: #E8F7FF;
 }
 
-.title {
-  color: #09d;
+.pushable {
+  box-shadow: 2px 2px 3px #bba687;
+  transition: all 0.2s;
+}
+
+.pushable:hover {
+  background-color: #ffd080;
+  transition: all 0.2s;
+}
+
+.pushable:active {
+  background-color: #ffd38a;
+  transform: translate(2px, 2px);
+  box-shadow: none;
+  transition: all 0.2s;
 }
