--- a/views/recettes/detail.pug
+++ b/views/recettes/detail.pug
@@ -76,4 +76,4 @@ block content
             label(for="comment") Votre commentaire
             textarea(name="comment", rows=4, placeholder="Super recette !")
           .col-50
-            input.pushable(type="submit", value="✔")
+            input.pushable.btn-small(type="submit", value="Poster")
