--- a/views/site/index.pug
+++ b/views/site/index.pug
@@ -20,5 +20,5 @@ block content
   if (!user)
     p.center 
       a.login(href='/users/signup') S'enregistrer
-      span &nbsp;
+      span &nbsp;&nbsp;&nbsp;
       a.login(href='/users/login') Se connecter
