--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -18,7 +18,7 @@ block content
         br
         input(type="password", name="password")
         br
-        input(type="submit", value="Signup!")
+        input.pushable(type="submit", value="C'est parti !")
         input(type="hidden" name="_csrf" value=csrfToken)
         br
         br
