--- a/public/stylesheets/recettes.css
+++ b/public/stylesheets/recettes.css
@@ -6,12 +6,14 @@
 
 .recettes > li {
   background: white;
+  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.3);
   display: inline-block;
   list-style: none;
   margin-bottom: 20px;
   margin-right: 20px;
+  min-width: 430px;
   padding: 4px;
-  box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 0.3)
+  width: 20%;
 }
 
 .recette-container {
@@ -19,7 +21,6 @@
   border-left: 2px dashed #ccc;
   height: 100%;
   margin: 25px 35px 25px 20px;
-  min-width: 400px;
   padding-left: 25px;
 }
 
@@ -102,15 +103,10 @@
 @media all and (max-width: 900px){
 
   ul.recettes > li {
-    margin-right: 0;
-    padding: 0;
-  }
-
-  .recette-container {
-    margin: 0 !important;
+    margin: 10px !important;
     min-width: 95vw !important;
     padding: 0 !important;
-    width: 95vw !important;
+    width: 90vw !important;
   }
 
   .recette {
