--- a/views/aromes/new.pug
+++ b/views/aromes/new.pug
@@ -21,9 +21,10 @@ block content
         label.col-10 Nom
         .col-20
           input(name="nom", type="text", placeholder="Le nom de l'arôme donné par le fabricant")
-      //- li
-      //-   label.col-10 Description
-      //-   input(name="description", type="texte", placeholder="Une courte description de l'arôme")
+      li
+        label.col-10 Description
+        .col-20
+          textarea(name="description", type="text", placeholder="Une description de l'arôme", rows=5)
     .col-30
       input(type="hidden" name="_csrf" value=csrfToken)
       input(type="submit" value="Enregistrer")
