--- a/views/site/menu.pug
+++ b/views/site/menu.pug
@@ -20,7 +20,7 @@ nav
           a(href='/recettes/search/auteur/' + user.local.pseudo) Mes recettes
         if (user.local.pseudo === "Tete1805")
           li
-            a(href='/admin/recettes') Admin
+            a(href='/admin/recettes') Administration
 
       li.separator
       li.title
@@ -33,6 +33,9 @@ nav
       if (user)
         li
           a(href='/aromes/my/') Mes arômes
+        if (user.local.pseudo === "Tete1805")
+          li
+            a(href='/admin/aromes') Administration
 
       //- li.separator
       //- li.title Groupes
@@ -57,6 +60,9 @@ nav
           a(href='/users/profile') Mon profil
         li
           a(href='/users/logout') Déconnexion
+        if (user.local.pseudo === "Tete1805")
+          li
+            a(href='/admin/users') Administration
 
   .brand-icon.col-50.left
       a(no-border, href="/") Recipes
